# huayra-soundboard

./: .gitignore  meson.build  org.huayra.Soundboard.json
data/: meson.build  org.huayra.Soundboard.appdata.xml.in  org.huayra.Soundboard.desktop.in  org.huayra.Soundboard.gschema.xml
po/: POTFILES  meson.build
src/: category-widget.c  category-widget.h  category-widget.ui  main.c  main.h  meson.build  sample-widget.c  sample-widget.h  sample-widget.ui  soundboard-window.c  soundboard-window.h  soundboard-window.ui  soundboard.gresource.xml  styles.css
